# Hypergraphs

./: CMakeLists.txt  CMakeLists_tmp.txt  Cell_t.hpp  FiducciaMatthesisAlgo.hpp  GraphLoader.hpp  Net_t.hpp  Part_t.hpp  README.md  main.cpp  result.csv
include/: Cell_t.hpp  CutHolder_t.hpp  FiducciaMatthesisAlgo.hpp  GraphLoader.hpp  Part_t.hpp
scripts/: collect_statistics.py
src/: CMakeLists.txt  FiducciaMatthesisAlgo.cpp  GraphLoader.cpp  Part_t.cpp
